--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="javascript.js"></script>
   <title>Colors</title>
+
+  <style>
+  span {
+     width: 15%;
+     font-size: .8em;
+     margin: .5em;
+     background: #efefef;
+     padding-bottom: 1em;
+     font-family: Helvetica;
+     display: inline-block;
+  }
+  </style>
 </head>
 <body>
 
