--- a/index.html
+++ b/index.html
@@ -4,19 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="javascript.js"></script>
+  <link rel="stylesheet" href="style.css">
   <title>Colors</title>
 
-  <style>
-  span {
-     width: 15%;
-     font-size: .8em;
-     margin: .5em;
-     background: #efefef;
-     padding-bottom: 1em;
-     font-family: Helvetica;
-     display: inline-block;
-  }
-  </style>
 </head>
 <body>
 
